<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical"
    tools:context="com.ggktech.sangam.timesheet.FragmentTimeSheet">
    <include
        android:id="@+id/top_bar"
        layout="@layout/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <include
        android:id="@+id/bottom_layout"
        layout="@layout/bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/top_bar"
        android:isScrollContainer="false"
        android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"


            android:paddingTop="@dimen/activity_vertical_margin">


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/textViewDate"
                    style="@style/MediumSizeTextView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:id="@+id/textViewApplyLeave"
                    android:text="@string/apply_leave"
                    style="@style/MediumSizeTextView"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/linearLayoutTaskHeaders"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content" android:text="TaskType"
                    style="@style/MediumSizeTextView"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content" android:text="TaskDuration"
                    style="@style/MediumSizeTextView"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <ListView
                android:id="@+id/listViewTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>


            <Button
                android:id="@+id/buttonAddNewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="@string/add_new_task"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/textViewHoursWorked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/hours_worked"
                    style="@style/MediumSizeTextView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"

                    android:id="@+id/editTextHoursWorked"
                    android:layout_toRightOf="@+id/textViewHoursWorked"
                    android:ems="10"
                    android:inputType="numberSigned" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/summary_of_the_day"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="6"

                android:gravity="top"

                android:paddingTop="15dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit_button" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
