<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ggktech.sangam.leave.FragmentAddLeave">

    <include
        android:id="@+id/top_bar"
        layout="@layout/topbar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:layout_below="@+id/top_bar"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/LinearHome"
            style="@style/MediumSizeTextView"
            android:text="@string/Check_multiple" />


        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/LinearHome"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/To_date"

                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/From_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/linearLayout"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumSizeTextView"
                android:text="Duration :" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout"
                android:layout_weight="1"
                android:text="Full day" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/radioButton"
                android:layout_weight="1"
                android:text="Half day" />
        </RadioGroup>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioGroup"
            android:layout_margin="10dp"
            android:text="@string/Leave_Type"
            style="@style/MediumSizeTextView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:entries="@array/array_LeaveTypes" />




        <TextView
            android:id="@+id/Reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioGroup"
            android:text="Reason :"
            android:layout_margin="10dp"
            style="@style/MediumSizeTextView"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayoutLeaveType"
            android:minLines="3"
            android:layout_marginLeft="5dp"
            android:gravity="top"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:maxLines="5"
            android:inputType="textMultiLine" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false"
            android:text="Save &amp; send mail" />
    </LinearLayout>

    <include
        android:id="@+id/bottom_bar"
        layout="@layout/bottom_bar_leave"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />

</RelativeLayout>
